[gd_scene load_steps=13 format=2]

[ext_resource path="res://scence/Elements/Ground.tscn" type="PackedScene" id=1]
[ext_resource path="res://primitives/sphere.obj" type="ArrayMesh" id=2]
[ext_resource path="res://scripts/Players/Player1.gd" type="Script" id=3]
[ext_resource path="res://scripts/Elements/double_Camera.gd" type="Script" id=4]
[ext_resource path="res://scence/Elements/Walls.tscn" type="PackedScene" id=5]
[ext_resource path="res://scence/Elements/Pick Up.tscn" type="PackedScene" id=6]
[ext_resource path="res://bgm/Sanokan - Midnight Bird.ogg" type="AudioStream" id=7]
[ext_resource path="res://scence/Sections/double_world.gd" type="Script" id=8]
[ext_resource path="res://scripts/Players/Player2.gd" type="Script" id=10]
[ext_resource path="res://UI/double_inner_UI.tscn" type="PackedScene" id=12]
[ext_resource path="res://bgm/少女さとり～ 3rd eye.ogg" type="AudioStream" id=13]

[sub_resource type="SphereShape" id=1]

[node name="World" type="Spatial"]
script = ExtResource( 8 )
__meta__ = {
"_editor_description_": "double_stage1"
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 20, 20 )
script = ExtResource( 4 )

[node name="LightRig" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0 )

[node name="KeyLight" type="DirectionalLight" parent="LightRig"]
transform = Transform( 0.5, 0.433013, -0.75, 0, 0.866025, 0.5, 0.866025, -0.25, 0.433013, 0, 0, 0 )
shadow_enabled = true
directional_shadow_max_distance = 50.0

[node name="FillLight" type="DirectionalLight" parent="LightRig"]
transform = Transform( -0.5, 0.433013, 0.75, 4.37114e-08, 0.866025, -0.5, -0.866025, -0.25, -0.433013, 0, 0, 0 )
light_energy = 0.2
directional_shadow_max_distance = 50.0

[node name="Player1" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1, 0 )
contacts_reported = 2
contact_monitor = true
script = ExtResource( 3 )
jump_force = 400

[node name="Player Mesh" type="MeshInstance" parent="Player1"]
mesh = ExtResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Player1"]
shape = SubResource( 1 )

[node name="Player2" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 0 )
contacts_reported = 2
contact_monitor = true
script = ExtResource( 10 )

[node name="Player Mesh" type="MeshInstance" parent="Player2"]
mesh = ExtResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Player2"]
shape = SubResource( 1 )

[node name="Ground" parent="." instance=ExtResource( 1 )]

[node name="Walls" parent="." instance=ExtResource( 5 )]

[node name="Pick UPs" type="Spatial" parent="."]

[node name="Pick Up2" parent="Pick UPs" groups=[
"pick up",
] instance=ExtResource( 6 )]
transform = Transform( 0.353553, -0.353553, 0, 0.25, 0.25, -0.353553, 0.25, 0.25, 0.353553, -5.003, 1, 7.601 )

[node name="Pick Up3" parent="Pick UPs" groups=[
"pick up",
] instance=ExtResource( 6 )]
transform = Transform( 0.353553, -0.353553, 0, 0.25, 0.25, -0.353553, 0.25, 0.25, 0.353553, 4.09245, 1, -5.69576 )

[node name="Pick Up4" parent="Pick UPs" groups=[
"pick up",
] instance=ExtResource( 6 )]
transform = Transform( 0.353553, -0.353553, 0, 0.25, 0.25, -0.353553, 0.25, 0.25, 0.353553, 6.69883, 0.997425, 6.64087 )

[node name="Pick Up5" parent="Pick UPs" groups=[
"pick up",
] instance=ExtResource( 6 )]
transform = Transform( 0.353553, -0.353553, 0, 0.25, 0.25, -0.353553, 0.25, 0.25, 0.353553, 8.48831, 1, -3.78076 )

[node name="Pick Up" parent="Pick UPs" groups=[
"pick up",
] instance=ExtResource( 6 )]
transform = Transform( 0.353553, -0.353553, 0, 0.25, 0.25, -0.353553, 0.25, 0.25, 0.353553, -6.64115, 1.00695, -5.03838 )

[node name="bgm_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="UI" parent="." instance=ExtResource( 12 )]

[node name="bgm_player" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource( 13 )
[connection signal="win" from="." to="UI" method="_on_World_win"]
[connection signal="body_entered" from="Player1" to="Player1" method="_on_Player_body_entered"]
[connection signal="points" from="Player1" to="." method="_on_Player1_points"]
[connection signal="body_entered" from="Player2" to="Player2" method="_on_Player_body_entered"]
[connection signal="points" from="Player2" to="." method="_on_Player2_points"]
[connection signal="quit" from="UI" to="." method="_on_UI_quit"]
